# pixel-platformer

./: .gitignore  CMakeLists.txt  README.md  TODO.md
src/: main.c  render.c  render.h  res.c  res.h
src/components/: info.h  menu.c  menu.h
src/game/: game.c  game.h
